# DataProjectV1.0

./: .gitignore  README.md  pyproject.toml
src/: docker-compose.yaml
src/dataprojectv1/api/app/: app.py  utils.py
src/docker/api/: Dockerfile
src/filescsv/: test_data.csv
src/filesjson/: cars.json
